--- a/students/package.json
+++ b/students/package.json
@@ -17,6 +17,8 @@
     "@tailwindcss/vite": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2pdf.js": "^0.9.0",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
