--- a/institution/package.json
+++ b/institution/package.json
@@ -32,6 +32,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.3",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.6.0",
