--- a/home/package.json
+++ b/home/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
