--- a/home/package.json
+++ b/home/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
     "tailwind-scrollbar-hide": "^2.0.0",
