--- a/institution/package.json
+++ b/institution/package.json
@@ -35,6 +35,7 @@
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.3",
     "recoil": "^0.7.7",
+    "sweetalert2": "^11.17.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
