--- a/students/package.json
+++ b/students/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "html2pdf.js": "^0.9.0",
-    "jspdf": "^2.5.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
