--- a/students/package.json
+++ b/students/package.json
@@ -24,8 +24,10 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "lucide-react": "^0.474.0",
+    "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^2.6.0",
