--- a/admin/package.json
+++ b/admin/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-switch": "^1.1.3",
     "@tailwindcss/vite": "^4.0.10",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.477.0",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
