--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hook-toast": "^0.0.3",
     "react-router-dom": "^7.2.0",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.2",
