fix: deployment setup

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -17,7 +17,7 @@ COPY . .
 RUN npm run build
 
 # Expose the port
-EXPOSE 3000
+EXPOSE 5173
 
 # Start the application
-CMD ["sh", "-c", "npm i -g serve && serve -s ./dist"]
+CMD ["sh", "-c", "npm run dev"]
