--- a/home/package.json
+++ b/home/package.json
@@ -35,6 +35,8 @@
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
+    "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
