--- a/home/package.json
+++ b/home/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google-analytics/data": "^5.1.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -29,6 +30,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.5.0",
     "framer-motion": "^12.0.6",
     "joi": "^17.13.3",
     "jspdf": "^2.5.2",
