--- a/institution/package.json
+++ b/institution/package.json
@@ -29,6 +29,8 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
