--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.477.0",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
