--- a/institution/package.json
+++ b/institution/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
