--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@tailwindcss/vite": "^4.0.10",
     "axios": "^1.8.1",
