--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@tailwindcss/vite": "^4.0.10",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
@@ -22,11 +23,13 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.477.0",
     "radix-ui": "^1.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hook-toast": "^0.0.3",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.2.0",
+    "recoil": "^0.7.7",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.10",
